--- a/site/src/assets/styles/_shame.scss
+++ b/site/src/assets/styles/_shame.scss
@@ -6,3 +6,24 @@
 // which is why it should stay empty.
 //
 // --------------------------------------------------------------------
+
+html, body {
+
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.wrapper {
+
+	width: 100%;
+	height: 100%;
+}
+
+body {
+
+	background-color: #99D5D6;
+	border: 20px solid #fff;
+	box-sizing: border-box;
+}
