--- a/site/src/handlebars/global-partials/htmlHead.hbs
+++ b/site/src/handlebars/global-partials/htmlHead.hbs
@@ -1,13 +1,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Fuel Your Titan</title>
-	<link rel="stylesheet" type="text/css" href="https://cloud.typography.com/796780/7594152/css/fonts.css" />
-    <meta name="google-signin-client_id" content="698081521401-ll1uc8id71cqg8odkhmmjue153fod61k.apps.googleusercontent.com	">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<style class="js-initialStyles">
 
 		/* Body starts at 0 opacity to fade in the site once all styles and JS are loaded. */
 		body {
+			background-color: #99D5D6;
 			opacity:0;
 		}
 
@@ -17,4 +16,5 @@
 			transition:none !important
 		}
 	</style>
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 </head>
