--- a/site/src/handlebars/global-partials/scripts.hbs
+++ b/site/src/handlebars/global-partials/scripts.hbs
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/easing/EasePack.min.js"></script>
 {{#unless isProd}}
 	<script src="/assets/scripts/three.min.js"></script>
 	<script src="/assets/scripts/main.js"></script>
