--- a/site/src/handlebars/global-partials/htmlHead.hbs
+++ b/site/src/handlebars/global-partials/htmlHead.hbs
@@ -6,7 +6,7 @@
 
 		/* Body starts at 0 opacity to fade in the site once all styles and JS are loaded. */
 		body {
-			background-color: #99D5D6;
+			background-color: #fff;
 			opacity:0;
 		}
 
