--- a/site/src/handlebars/global-partials/htmlHead.hbs
+++ b/site/src/handlebars/global-partials/htmlHead.hbs
@@ -16,5 +16,6 @@
 			transition:none !important
 		}
 	</style>
+	<link href="/assets/styles/{{ js }}.css" type="text/css" rel="stylesheet" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 </head>
