--- a/site/src/handlebars/global-partials/layout.hbs
+++ b/site/src/handlebars/global-partials/layout.hbs
@@ -5,6 +5,10 @@
 <div class="wrapper">
 	{{> @partial-block }}
 </div>
-{{> scripts }}
 </body>
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/easing/EasePack.min.js"></script>
+<script src="/assets/scripts/three.min.js"></script>
+<script src="/assets/scripts/{{ js }}.js"></script>
 </html>
