Started rewriting socket handling

--- a/site/src/handlebars/debug.hbs
+++ b/site/src/handlebars/debug.hbs
@@ -1,3 +1,14 @@
 {{#> layout js="debug" }}
-
+	<div class="debug__controls">
+		<p>Connected Salsas: </p>
+		<button>Add a Salsa</button>
+	</div>
+	<div class="debug__list">
+		<div class="debug__salsa">
+			<div>Id:</div>
+			<div>Rotation:</div>
+			<input placeholder="New Rotation" /><br>
+			<button>Disconnect</button>
+		</div>
+	</div>
 {{/layout}}
