--- a/site/src/assets/styles/core/_global.scss
+++ b/site/src/assets/styles/core/_global.scss
@@ -5,6 +5,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	position: relative;
 }
 
 .wrapper {
@@ -22,12 +23,44 @@ body {
 .preloader {
 
 	position: absolute;
-	top: 20px;
-	left: 20px;
-	width: calc(100% - 40px);
-	height: calc(100% - 40px);
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: calc(100% + 70px);
 	background-color: #99D5D6;
-	transform: scaleY(0);
+	transform: translateY(100%);
 	transform-origin: bottom;
 	will-change: transform;
+
+	&.is-animating {
+		&:after {
+
+			content: "";
+			display: block;
+			width: 100%;
+			background-color: #fff;
+			will-change: background-position;
+			background-repeat: repeat-x;
+			animation: wave 6s linear infinite;
+			position: absolute;
+			top: 0;
+			transform: translateY(-100%);
+
+			height: 70px;
+			background-image: url(/assets/images/wave.svg);
+			background-size: 250% 100%;
+		}
+	}
+}
+
+@keyframes wave {
+	from {
+
+		background-position: 0 0;
+	}
+
+	to {
+
+		background-position: 500% 0;
+	}
 }
