--- a/site/src/handlebars/index.hbs
+++ b/site/src/handlebars/index.hbs
@@ -1,4 +1,4 @@
 {{#> layout js="main" }}
-	<div class="preloader is-animating">
-	</div>
+	<div class="pointer"></div>
+	<div class="preloader is-animating"></div>
 {{/layout}}
