--- a/site/src/assets/styles/core/_global.scss
+++ b/site/src/assets/styles/core/_global.scss
@@ -4,7 +4,6 @@ html, body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 	position: relative;
 }
 
@@ -43,7 +42,7 @@ body {
 			background-repeat: repeat-x;
 			animation: wave 6s linear infinite;
 			position: absolute;
-			top: 0;
+			top: 5px;
 			transform: translateY(-100%);
 
 			height: 70px;
