--- a/site/src/handlebars/global-partials/htmlHead.hbs
+++ b/site/src/handlebars/global-partials/htmlHead.hbs
@@ -17,5 +17,5 @@
 		}
 	</style>
 	<link href="/assets/styles/{{ js }}.css" type="text/css" rel="stylesheet" />
-	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<meta name="viewport"content="initial-scale=1,maximum-scale=1,user-scalable=no">
 </head>
