--- a/site/src/assets/styles/core/_global.scss
+++ b/site/src/assets/styles/core/_global.scss
@@ -11,6 +11,25 @@ html, body {
 
 	width: 100%;
 	height: 100%;
+
+	&:after, &:before {
+
+		content: "";
+		display: block;
+		position: absolute;
+		height: 20px;
+		width: 100%;
+		background-color: #fff;
+		z-index: 2;
+	}
+
+	&:before {
+		top: -20px;
+	}
+
+	&:after {
+		bottom: -20px;
+	}
 }
 
 body {
