--- a/site/src/handlebars/global-partials/layout.hbs
+++ b/site/src/handlebars/global-partials/layout.hbs
@@ -7,6 +7,7 @@
 		</div>
 	</body>
 	<script src="/socket.io/socket.io.js"></script>
+	<script src="http://hammerjs.github.io/dist/hammer.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/easing/EasePack.min.js"></script>
 	<script src="/assets/scripts/three.min.js"></script>
