Added letter loading animation

--- a/site/src/handlebars/index.hbs
+++ b/site/src/handlebars/index.hbs
@@ -1,4 +1,7 @@
 {{#> layout js="main" }}
 	<div class="pointer"></div>
 	<div class="preloader is-animating"></div>
+	<div class="letters">
+		<img class="letters__bg" data-src="/assets/images/letter-sprite.png" />
+	</div>
 {{/layout}}
