--- a/site/src/assets/styles/core/_global.scss
+++ b/site/src/assets/styles/core/_global.scss
@@ -4,13 +4,15 @@ html, body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
-	position: relative;
+	overflow-x: hidden;
 }
 
 .wrapper {
 
 	width: 100%;
 	height: 100%;
+	position: relative;
+	overflow: hidden;
 
 	&:after, &:before {
 
@@ -81,4 +83,24 @@ body {
 
 		background-position: 500% 0;
 	}
+}
+
+.letters {
+
+	width: 316px;
+	height: 76px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -38px;
+	margin-left: -158px;
+	overflow: hidden;
+	transform: scale(0.75);
+}
+
+.letters__bg {
+
+	position: relative;
+	will-change: transform;
+	transform: translateY(76px);
 }
