Adjusted sockets to be more stringy

--- a/site/src/handlebars/debug.hbs
+++ b/site/src/handlebars/debug.hbs
@@ -7,7 +7,7 @@
 		<div class="debug__list js-salsas">
 			<div class="debug__salsa js-salsas__template" style="display:none">
 				<div>Id: <span class="js-salsas__id"></span></div>
-				<div>Rotation: <span class="js-salsas__rotation"></span></div>
+				<div class="js-salsas__rotation"></div>
 				<input class="debug__salsa__slider js-salsas__rotation-controller" type="range" min="0" max="360" step="1" />
 				<button class="js-salsas__disconnect">Disconnect</button>
 			</div>
